package uoc.tfm.vmejia.speedrun.ctrl;

public class CtrlAlmacen {

}
